@@ -6,11 +6,11 @@
  */
 
 plugins {
-    id("com.android.library")
-    id("com.facebook.react")
-    id("de.undercouch.download")
     id("maven-publish")
-    id("org.jetbrains.kotlin.android")
+    id("com.facebook.react")
+    alias(libs.plugins.android.library)
+    alias(libs.plugins.download)
+    alias(libs.plugins.kotlin.android)
 }
 
 import com.facebook.react.tasks.internal.*
@@ -45,7 +45,7 @@ def cmakeVersion = System.getenv("CMAKE_VERSION") ?: "3.22.1"
 ext.cmake_version = cmakeVersion
 
 // You need to have following folders in this directory:
-//   - boost_1_76_0
+//   - boost_1_83_0
 //   - double-conversion-1.1.6
 //   - folly-deprecate-dynamic-initializer
 //   - glog-0.3.5
@@ -60,6 +60,15 @@ def boostPath = dependenciesPath ?: System.getenv("REACT_NATIVE_BOOST_PATH")
 // reduce the size of the React Native published .AAR.
 def skipPrefabPublishing = System.getenv("REACT_NATIVE_SKIP_PREFAB") != null
 def prefabHeadersDir = project.file("$buildDir/prefab-headers")
+
+// Native versions which are defined inside the version catalog (libs.versions.toml)
+def BOOST_VERSION = libs.versions.boost.get()
+def DOUBLE_CONVERSION_VERSION = libs.versions.doubleconversion.get()
+def FMT_VERSION = libs.versions.fmt.get()
+def FOLLY_VERSION = libs.versions.folly.get()
+def GLOG_VERSION = libs.versions.glog.get()
+def LIBEVENT_VERSION = libs.versions.libevent.get()
+def GTEST_VERSION = libs.versions.gtest.get()
 
 final def preparePrefab = tasks.register("preparePrefab", PreparePrefabHeadersTask) {
     dependsOn(prepareBoost, prepareDoubleConversion, prepareFolly, prepareGlog)
@@ -153,16 +162,18 @@ final def preparePrefab = tasks.register("preparePrefab", PreparePrefabHeadersTa
             new PrefabPreprocessingEntry(
                 "folly_runtime",
                 [
+                    new Pair(new File(buildDir, "third-party-ndk/fmt/include/").absolutePath, ""),
                     new Pair(new File(buildDir, "third-party-ndk/folly/").absolutePath, ""),
-                    new Pair(new File(buildDir, "third-party-ndk/boost/boost_1_76_0/").absolutePath, ""),
+                    new Pair(new File(buildDir, "third-party-ndk/boost/boost_1_83_0/").absolutePath, ""),
                     new Pair(new File(buildDir, "third-party-ndk/double-conversion/").absolutePath, ""),
                 ]
             ),
             new PrefabPreprocessingEntry(
                 "react_nativemodule_core",
                 [
-                    new Pair(new File(buildDir, "third-party-ndk/boost/boost_1_76_0/").absolutePath, ""),
+                    new Pair(new File(buildDir, "third-party-ndk/boost/boost_1_83_0/").absolutePath, ""),
                     new Pair(new File(buildDir, "third-party-ndk/double-conversion/").absolutePath, ""),
+                    new Pair(new File(buildDir, "third-party-ndk/fmt/include/").absolutePath, ""),
                     new Pair(new File(buildDir, "third-party-ndk/folly/").absolutePath, ""),
                     new Pair(new File(buildDir, "third-party-ndk/glog/exported/").absolutePath, ""),
                     new Pair("../ReactCommon/butter/", "butter/"),
@@ -207,8 +218,8 @@ final def preparePrefab = tasks.register("preparePrefab", PreparePrefabHeadersTa
             new PrefabPreprocessingEntry(
                 "hermes_executor",
                 // "hermes_executor" is statically linking against "hermes_executor_common"
-                // and "hermes_inspector". Here we expose only the headers that we know are needed.
-                new Pair("../ReactCommon/hermes/inspector/", "hermes/inspector/")
+                // and "hermes_inspector_modern". Here we expose only the headers that we know are needed.
+                new Pair("../ReactCommon/hermes/inspector-modern/", "hermes/inspector-modern/")
             ),
             new PrefabPreprocessingEntry(
                 "jscexecutor",
@@ -237,7 +248,7 @@ final def preparePrefab = tasks.register("preparePrefab", PreparePrefabHeadersTa
             ),
             new PrefabPreprocessingEntry(
                 "jsinspector",
-                new Pair("../ReactCommon/jsinspector/", "jsinspector/"),
+                new Pair("../ReactCommon/jsinspector-modern/", "jsinspector-modern/"),
             ),
         ]
     )
@@ -371,23 +382,20 @@ tasks.register('prepareJSC', PrepareJSCTask) {
     it.outputDir = project.layout.buildDirectory.dir("third-party-ndk/jsc")
 }
 
-task downloadNdkBuildDependencies {
-    if (!boostPath) {
-        dependsOn(downloadBoost)
-    }
-    dependsOn(downloadDoubleConversion)
-    dependsOn(downloadFolly)
-    dependsOn(downloadGlog)
-    dependsOn(downloadFmt)
-    dependsOn(downloadLibevent)
-    dependsOn(downloadGtest)
+task prepareKotlinBuildScriptModel {
+    // This task is run when Gradle Sync is running.
+    // We create it here so we can let it depend on preBuild inside the android{}
 }
 
 // As ReactAndroid builds from source, the codegen needs to be built before it can be invoked.
 // This is not the case for users of React Native, as we ship a compiled version of the codegen.
 final def buildCodegenCLITask = tasks.register('buildCodegenCLI', BuildCodegenCLITask) {
     it.codegenDir.set(file("$rootDir/node_modules/@react-native/codegen"))
-    it.bashWindowsHome.set(project.findProperty("REACT_WINDOWS_BASH"))
+    it.bashWindowsHome.set(project.findProperty("react.internal.windowsBashPath"))
+    it.onlyIf {
+        // For build from source scenario, we don't need to build the codegen at all.
+        rootProject.name != "react-native-build-from-source"
+    }
 }
 
 /**
@@ -441,6 +449,11 @@ def reactNativeArchitectures() {
     return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
 }
 
+def enableWarningsAsErrors() {
+    def value = project.getProperties().get("enableWarningsAsErrors")
+    return value != null ? value : false
+}
+
 task packageReactNdkLibsForBuck(type: Copy) {
     dependsOn("mergeDebugNativeLibs")
     // Shared libraries (.so) are copied from the merged_native_libs folder instead
@@ -463,8 +476,8 @@ repositories {
 }
 
 android {
-    compileSdk 33
-    buildToolsVersion = "33.0.1"
+    compileSdk libs.versions.compileSdk.get().toInteger()
+    buildToolsVersion = libs.versions.buildTools.get()
     namespace "com.facebook.react"
 
     // Used to override the NDK path/version on internal CI or by allowing
@@ -477,18 +490,20 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
         // Using '-Xjvm-default=all' to generate default java methods for interfaces
         freeCompilerArgs = ['-Xjvm-default=all']
+        // Using -PenableWarningsAsErrors=true prop to enable allWarningsAsErrors
+        kotlinOptions.allWarningsAsErrors = enableWarningsAsErrors()
     }
 
     defaultConfig {
-        minSdk = 21
-        targetSdk = 33
+        minSdk = libs.versions.minSdk.get().toInteger()
+        targetSdk = libs.versions.targetSdk.get().toInteger()
         versionCode(1)
         versionName("1.0")
 
@@ -510,7 +525,6 @@ android {
                     "-DREACT_BUILD_DIR=$buildDir",
                     "-DANDROID_STL=c++_shared",
                     "-DANDROID_TOOLCHAIN=clang",
-                    "-DANDROID_PLATFORM=android-21",
                     // Due to https://github.com/android/ndk/issues/1693 we're losing Android
                     // specific compilation flags. This can be removed once we moved to NDK 25/26
                     "-DANDROID_USE_LEGACY_TOOLCHAIN_FILE=ON"
@@ -593,11 +607,16 @@ android {
             preparePrefab
     )
     generateCodegenSchemaFromJavaScript.dependsOn(buildCodegenCLITask)
+    prepareKotlinBuildScriptModel.dependsOn(
+            preBuild,
+            ":packages:react-native:ReactAndroid:hermes-engine:preBuild",
+    )
 
     sourceSets.main {
         res.srcDirs = ["src/main/res/devsupport", "src/main/res/shell", "src/main/res/views/modal", "src/main/res/views/uimanager"]
         java {
             srcDirs = ["src/main/java", "src/main/libraries/soloader/java", "src/main/jni/first-party/fb/jni/java"]
+            exclude("com/facebook/annotationprocessors")
             exclude("com/facebook/react/processing")
             exclude("com/facebook/react/module/processing")
         }
@@ -751,6 +770,7 @@ dependencies {
     api(libs.okhttp3.urlconnection)
     api(libs.okhttp3)
     api(libs.okio)
+    compileOnly(libs.javax.annotation.api)
     api(libs.javax.inject)
 
     // It's up to the consumer to decide if hermes should be included or not.
@@ -760,9 +780,6 @@ dependencies {
     testImplementation(libs.junit)
     testImplementation(libs.assertj)
     testImplementation(libs.mockito)
-    testImplementation(libs.powermock.api.mockito2)
-    testImplementation(libs.powermock.classloading.xstream)
-    testImplementation(libs.powermock.module.junit4.rule)
     testImplementation(libs.robolectric)
     testImplementation(libs.thoughtworks)
 
@@ -778,29 +795,18 @@ react {
     jsRootDir = file("../Libraries")
 }
 
-kotlin {
-    // We intentionally don't build on JDK 17 as our tests are broken due to Mockito/PowerMock
-    // not running well on JDK 17.
-    jvmToolchain(11)
+// For build from source, we need to override the privateReact extension.
+// This is neeeded as the build-from-source won't have a com.android.application
+// module to apply the plugin to, so it's codegenDir and reactNativeDir won't be evaluated.
+if (rootProject.name == "react-native-build-from-source") {
+    privateReact {
+        codegenDir = file("$rootDir/../@react-native/codegen")
+        reactNativeDir = file("$rootDir")
+    }
 }
 
-tasks.withType(Test).all {
-    // We add --add-opens flags to make sure we can run PowerMock tests on JDK >= 17
-    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
-        jvmArgs += [
-            "--illegal-access=permit",
-            "--add-opens=java.base/java.lang=ALL-UNNAMED",
-            "--add-opens=java.base/java.xml.internal=ALL-UNNAMED",
-            "--add-opens=java.base/java.util=ALL-UNNAMED",
-            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-            "--add-opens=java.base/java.net=ALL-UNNAMED",
-            "--add-opens=java.base/java.security=ALL-UNNAMED",
-            "--add-opens=java.base/java.io=ALL-UNNAMED",
-            "--add-opens=java.base/java.nio=ALL-UNNAMED",
-            "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
-            "--add-opens=java.base/jdk.xml.internal=ALL-UNNAMED",
-        ]
-    }
+kotlin {
+    jvmToolchain(17)
 }
 
 apply plugin: "org.jetbrains.kotlin.android"
